--- a/api/.env.example
+++ b/api/.env.example
@@ -1,5 +1,5 @@
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=jobs_db
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=jobs_db
+DB_USER=postgres
+DB_PASSWORD=postgres
